accès refusé si non connecté

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,8 +41,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-       # - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/accueil, roles: ROLE_USER }
+         - { path: ^/register, roles: ROLE_ADMIN }
+         - { path: ^/sortir, roles: ROLE_USER }
+         - { path: ^/participant, roles: ROLE_USER }
+         - { path: ^/sortie, roles: ROLE_USER }
 
 when@test:
     security:
