--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,7 +42,10 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/sortir, roles: ROLE_USER }
+        - { path: ^/participant, roles: ROLE_USER }
+        - { path: ^/accueil, roles: ROLE_USER }
+        - { path: ^/register, roles: ROLE_ADMIN }
 
 when@test:
     security:
